--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hangul-typing-animation",
   "version": "1.0.0",
-  "description": "",
+  "description": "It is a library that can be used to create a typing animation(for Korean).",
   "main": "lib/index.js",
   "module": "esm/index.js",
   "sideEffects": false,
@@ -15,25 +15,50 @@
     "remove:build": "rimraf lib esm",
     "build:cjs": "tsc",
     "build:es": "tsc -m esNext --outDir esm",
-    "build": "yarn remove:build && yarn build:cjs && yarn build:es"
+    "build": "yarn remove:build && yarn build:cjs && yarn build:es",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "test": "jest --maxWorkers 2",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
-  "keywords": [],
+  "keywords": [
+    "hangul",
+    "typing",
+    "animation",
+    "react",
+    "typescript",
+    "korean",
+    "한글 타이핑 애니메이션",
+    "typing stream"
+  ],
   "author": "",
   "license": "ISC",
   "packageManager": "yarn@4.0.2",
   "devDependencies": {
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@storybook/addon-essentials": "^7.5.3",
+    "@storybook/addon-interactions": "^7.5.3",
+    "@storybook/addon-links": "^7.5.3",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.5.3",
+    "@storybook/react": "^7.5.3",
+    "@storybook/react-webpack5": "^7.5.3",
+    "@storybook/testing-library": "^0.2.2",
+    "@types/babel__preset-env": "^7",
+    "@types/jest": "^29.5.10",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
+    "jest": "^29.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.5",
     "storybook": "^7.5.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
-  },
-  "peerDependencies": {
-    "react": "^16.8.0  || ^17.0.0 || ^18.0.0",
-    "react-dom": "^16.8.0  || ^17.0.0 || ^18.0.0"
   }
 }
