--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hangul-typing-animation",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "It is a library that can be used to create a typing animation(for Korean).",
   "main": "lib/index.js",
   "module": "esm/index.js",
@@ -46,6 +46,7 @@
   "homepage": "https://github.com/keisokoo/hangul-typing-animation#readme",
   "packageManager": "yarn@4.0.2",
   "devDependencies": {
+    "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
@@ -57,6 +58,7 @@
     "@storybook/react": "^7.5.3",
     "@storybook/react-webpack5": "^7.5.3",
     "@storybook/testing-library": "^0.2.2",
+    "@types/babel__core": "^7",
     "@types/babel__preset-env": "^7",
     "@types/jest": "^29.5.10",
     "@types/node": "^20.10.0",
